fix the picture and add some questions

--- a/Sightseeing/Sightseeing.html
+++ b/Sightseeing/Sightseeing.html
@@ -123,6 +123,7 @@
     <!--comment end-->
 
     <!--footer begin-->
+    <!--some question the function of font tab-->
     <div style="text-align: center;">
         <p>
             <font color="#1d5983" size="2">
