--- a/Sightseeing/Sightseeing.html
+++ b/Sightseeing/Sightseeing.html
@@ -33,8 +33,13 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;情侣路是珠海城市的象征，长28公里，由拱北粤华花园开始，经海湾大酒店、九洲港、海滨泳场、珠海渔女、香炉湾等景点，景色秀丽、海涛阵阵、空气清新。游人可在此瞭望大海，窥视澳门。
             </p>
             <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;最佳旅游时间：1月-12月，热带海洋气候，全年皆适合旅游。12月至次年4月可避开高峰。
+                &nbsp;&nbsp;&nbsp;&nbsp;最佳旅游时间：<ins><em><strong><font color="#009933">1月-12月</font></strong></em></ins>，
+                热带海洋气候，全年皆适合旅游。<ins><em><strong><font color="#009933">12月至次年4月</font></strong></em></ins>可避开高峰。
             </p>
+            <P>
+                &nbsp;&nbsp;&nbsp;&nbsp;伊露岛沙滩屋的构造很独特，彻底的南亚风情——雪白的圆形房子，
+                尖尖的茅草屋顶，木质的框<ins><strong><font color="#F90">......[详细]</font></strong></ins>
+            </P>
         </div>
     </div>
     <!--introduction end-->
