update some content

--- a/ClothesShop/index.html
+++ b/ClothesShop/index.html
@@ -8,12 +8,35 @@
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+
 <div id="header">
 
 </div>
 
 <div id="content">
-
+<h2>潮流前线 / Tidal</h2>
+    <div class="current">
+        <dl>
+            <dt class="match_1"></dt>
+            <dd class="current01"></dd>
+            <dd class="current02"><a class="three" href="#">快速购买通道</a></dd>
+        </dl>
+        <dl>
+            <dt class="match_1"></dt>
+            <dd class="current01"></dd>
+            <dd class="current02"><a class="three" href="#">快速购买通道</a></dd>
+        </dl>
+        <dl>
+            <dt class="match_1"></dt>
+            <dd class="current01"></dd>
+            <dd class="current02"><a class="three" href="#">快速购买通道</a></dd>
+        </dl>
+        <dl>
+            <dt class="match_1"></dt>
+            <dd class="current01"></dd>
+            <dd class="current02"><a class="three" href="#">快速购买通道</a></dd>
+        </dl>
+    </div>
 </div>
 
 <div id="footer">
