--- a/FlowerShop/index.html
+++ b/FlowerShop/index.html
@@ -27,7 +27,7 @@
     <br>
 </div>
 <div class="owner">
-    <img src="images/owner.jpg" alt="owner" align="left">
+    <img src="images/owner.png" alt="owner" align="left">
     <h3>Michael</h3>
     <p>飞舞的花儿像一首诗 ?写着秋天的心事 ?带着相思 ?轻轻、轻轻 ?飘向大地 ?</p>
     <p>也许这只是秋季里的一场游戏 ?</p>
