solute the form summit and then turn into another page

--- a/Travelling/RegisterFirst.html
+++ b/Travelling/RegisterFirst.html
@@ -11,7 +11,7 @@
 </div>
 <div id="content">
     <h2 id="step">用户注册</h2>
-    <form method="post" action="#" id="form">
+    <form method="post" action="registerSecond.html" id="form">
         <h3>用户注册</h3>
         <table>
             <tr>
@@ -78,9 +78,7 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <button type="submit">
-                        下一步
-                    </button>
+                    <button type="submit">下一步</button>
                 </td>
             </tr>
         </table>
