--- a/Travelling/registerThird.html
+++ b/Travelling/registerThird.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>用户注册</title>
+    <link href="css/RegisterThird.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="banner">
-    <img src="images/banner.jpg">
+    <img src="images/BannerSecond.jpeg">
 </div>
 <div id="content">
 
