--- a/Travelling/index.html
+++ b/Travelling/index.html
@@ -3,35 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>旅游风景网</title>
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/slider.js" type="text/javascript"></script>
+    <!--<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>-->
+    <!--<script src="js/slider.js" type="text/javascript"></script>-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-<div class="slider">
-    <ul class="slider-main">
-        <li class="slider-panel">
-            <img src="images/1.jpeg">
-        </li>
-        <li class="slider-panel">
-            <img src="images/2.jpg">
-        </li>
-        <li class="slider-panel">
-            <img src="images/3.png">
-        </li>
-        <li class="slider-panel">
-            <img src="images/4.jpg">
-    </ul>
-    <div class="slider-extra">
-        <ul class="slider-nav">
-            <li class="slider-item"></li>
-            <li class="slider-item"></li>
-            <li class="slider-item"></li>
-            <li class="slider-item"></li>
-        </ul>
-        <div class="slider-page">
-            <a class="slider-pre" href="javascript:;;"><</a>
-            <a class="slider-next" href="javascript:;;">></a>
+<!--<div class="slider">-->
+    <!--<ul class="slider-main">-->
+        <!--<li class="slider-panel">-->
+            <!--<img src="images/1.jpeg">-->
+        <!--</li>-->
+        <!--<li class="slider-panel">-->
+            <!--<img src="images/2.jpg">-->
+        <!--</li>-->
+        <!--<li class="slider-panel">-->
+            <!--<img src="images/3.png">-->
+        <!--</li>-->
+        <!--<li class="slider-panel">-->
+            <!--<img src="images/4.jpg">-->
+    <!--</ul>-->
+    <!--<div class="slider-extra">-->
+        <!--<ul class="slider-nav">-->
+            <!--<li class="slider-item"></li>-->
+            <!--<li class="slider-item"></li>-->
+            <!--<li class="slider-item"></li>-->
+            <!--<li class="slider-item"></li>-->
+        <!--</ul>-->
+        <!--<div class="slider-page">-->
+            <!--<a class="slider-pre" href="javascript:;;"><</a>-->
+            <!--<a class="slider-next" href="javascript:;;">></a>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+<div id="albums">
+    <div id="FirstRow">
+        <div class="PhotoFrame">
+            <img src="images/img1.jpg" id="FirstPhoto">
+        </div>
+        <div class="Desc">
+            <h4>test</h4>
+            <p>this is just a test!</p>
+        </div>
+    </div>
+    <div id="SecondRow">
+        <div id="SecondPhoto"></div>
+        <div id="SecondDesc">
+            <h4></h4>
+            <p></p>
+        </div>
+    </div>
+    <div id="ThirdRow">
+        <div id="ThirdPhoto"></div>
+        <div id="ThirdDesc">
+            <h4></h4>
+            <p></p>
         </div>
     </div>
 </div>
