--- a/TestBootstrap/BootstrapSlider.html
+++ b/TestBootstrap/BootstrapSlider.html
@@ -52,9 +52,6 @@
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <!-- <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
 
@@ -79,6 +76,7 @@
             </div>
         </div>
         <div class="item">
+            <!--<video src="video/home_loop_720p.mp4" autoplay="ture" loop="ture" ></video>-->
             <img src="images/BannerThird.jpeg" alt="..." style="width: 100%">
             <div class="carousel-caption">
             </div>
