--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -3,33 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>旅游风景网</title>
-    <!--<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>-->
-    <!--<script src="js/slider.js" type="text/javascript"></script>-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" href="css/header.css" type="text/css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+    <!--不要去用beta版，不稳定-->
+    <script type="text/javascript" src="js/hideNavigation.js"></script>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="header" id="header">
+    <div class="inner_c">
+        <img src="images/test.jpg"/>
+        <div class="nav">
+            <ul>
+                <li><a href="http://www.zhbit.com/about/20110603/3996.html">学校概况</a></li>
+                <li><a href="http://zhaosheng.zhbit.com/Column/setting">专业设置</a></li>
+                <li><a href="http://dangqun.zhbit.com/">党务工作</a></li>
+                <li><a href="http://guojihz.zhbit.com/">国际交流</a></li>
+                <li><a href="http://www.zhbit.com/zhaos_jy/jycy.html">就业创业</a></li>
+                <li class="last"><a href="http://lib.zhbit.com/">校图书馆</a></li>
+            </ul>
+        </div>
+        <a href="login.html" class="jrwm">登录</a>
+    </div>
+</div>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="images/BannerFirst.jpeg" alt="..." style="width: 100%">
+            <div class="carousel-caption">
+            </div>
+        </div>
+        <div class="item">
+            <img src="images/BannerSecond.jpeg" alt="..." style="width: 100%">
+            <div class="carousel-caption">
+            </div>
+        </div>
+        <div class="item">
+            <!--<video src="video/home_loop_720p.mp4" autoplay="ture" loop="ture" ></video>-->
+            <img src="images/BannerThird.jpeg" alt="..." style="width: 100%">
+            <div class="carousel-caption">
+            </div>
+        </div>
+    </div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 <div id="albums">
-    <div id="FirstRow">
+    <div id="FirstRow" class="row">
         <div class="PhotoFrame">
-            <img src="images/img1.jpg" id="FirstPhoto">
+            <img src="images/img1.jpg" >
         </div>
         <div class="Desc">
             <h4>test</h4>
             <p>this is just a test!</p>
         </div>
     </div>
-    <div id="SecondRow">
-        <div id="SecondPhoto"></div>
-        <div id="SecondDesc">
-            <h4></h4>
-            <p></p>
+    <div id="SecondRow" class="row">
+        <div class="Desc">
+            <h4>test</h4>
+            <p>this is just a test!</p>
+        </div>
+        <div class="PhotoFrame" >
+            <img src="images/img1.jpg" >
         </div>
     </div>
-    <div id="ThirdRow">
-        <div id="ThirdPhoto"></div>
-        <div id="ThirdDesc">
-            <h4></h4>
-            <p></p>
+    <div id="ThirdRow" class="row">
+        <div class="PhotoFrame">
+            <img src="images/img1.jpg" >
+        </div>
+        <div class="Desc">
+            <h4>test</h4>
+            <p>this is just a test!</p>
         </div>
     </div>
 </div>
