add the login file

--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -17,12 +17,12 @@
         <img src="images/test.jpg"/>
         <div class="nav">
             <ul>
-                <li><a href="http://www.zhbit.com/about/20110603/3996.html">学校概况</a></li>
+                <li><a href="index.html">网站首页</a></li>
                 <li><a href="http://zhaosheng.zhbit.com/Column/setting">专业设置</a></li>
                 <li><a href="http://dangqun.zhbit.com/">党务工作</a></li>
                 <li><a href="http://guojihz.zhbit.com/">国际交流</a></li>
                 <li><a href="http://www.zhbit.com/zhaos_jy/jycy.html">就业创业</a></li>
-                <li class="last"><a href="http://lib.zhbit.com/">校图书馆</a></li>
+                <li class="last"><a href="RegisterFirst.html">用户注册</a></li>
             </ul>
         </div>
         <a href="login.html" class="jrwm">登录</a>
