--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -5,6 +5,7 @@
     <title>用户登录</title>
     <link rel="stylesheet" href="css/login.css" type="text/css">
     <link rel="stylesheet" href="css/footer.css" type="text/css">
+    <script type="text/javascript" src="js/contactMethod.js"></script>
 </head>
 <body>
 <div>
@@ -31,23 +32,35 @@
     </div>
 </div>
 <footer>
-    <p>
-        <span>公司简介 |</span>
-        <span>广告服务 |</span>
-        <span>联系我们 |</span>
-        <span>招聘信息 |</span>
-        <span>网站律师 </span>
-    </p>
-    <p>
-        <span>地址:广东省珠海市唐家湾金凤路6号</span>
-        <span>邮编：519088</span>
-    </p>
-    <p>
-        <span>Copyright©1996 - 2017 Travelling. All Rights Reserved.</span>
-    </p>
-    <p>
-        <span>Sightseeing公司 版权所有</span>
-    </p>
+    <div id="contact">
+        <div id="logo">
+            <img src="" alt="">
+        </div>
+        <div id="concact-method">
+            <div id="weibo"></div>
+            <div id="wechat"></div>
+        </div>
+    </div>
+
+    <div id="copyright">
+        <p>
+            <span class="copyright-span"><a href="#">公司简介</a></span>
+            <span class="copyright-span"><a href="#">广告服务</a></span>
+            <span class="copyright-span"><a href="#">联系我们</a></span>
+            <span class="copyright-span"><a href="#">招聘信息</a></span>
+            <span class="copyright-span"><a href="#">网站律师</a></span>
+        </p>
+        <p>
+            <span class="copyright-span">地址:广东省珠海市唐家湾金凤路6号</span>
+            <span class="copyright-span">邮编：519088</span>
+        </p>
+        <p>
+            <span>Copyright©1996 - 2017 Travelling. All Rights Reserved.</span>
+        </p>
+        <p>
+            <span>Sightseeing公司 版权所有</span>
+        </p>
+    </div>
 </footer>
 </body>
 </html>
