update the footer

--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -51,14 +51,14 @@
             <span class="copyright-span"><a href="#">网站律师</a></span>
         </p>
         <p>
-            <span class="copyright-span">地址:广东省珠海市唐家湾金凤路6号</span>
-            <span class="copyright-span">邮编：519088</span>
+            <span class="copyright-span"> <a href="#">地址:广东省珠海市唐家湾金凤路6号</a></span>
+            <span class="copyright-span"><a href="#">邮编：519088 </a></span>
         </p>
         <p>
-            <span>Copyright©1996 - 2017 Travelling. All Rights Reserved.</span>
+            <span> <a href="#">Copyright©1996 - 2017 Travelling. All Rights Reserved.</a></span>
         </p>
         <p>
-            <span>Sightseeing公司 版权所有</span>
+            <span> <a href="#">Sightseeing公司 版权所有</a></span>
         </p>
     </div>
 </footer>
