update JavaScript images pop

--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -37,7 +37,9 @@
             <img src="" alt="">
         </div>
         <div id="concact-method">
-            <div id="weibo"></div>
+            <div id="weibo">
+                <img src="images/cat.jpeg" alt="" id="weibo-pop">
+            </div>
             <div id="wechat"></div>
         </div>
     </div>
