add the scrollTop() of jquery

--- a/旅游风景网/detailFirst.html
+++ b/旅游风景网/detailFirst.html
@@ -2,44 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>旅行风景</title>
+    <title>旅行游记</title>
     <link rel="stylesheet" href="css/detailFirst.css" type="text/css">
 </head>
 <body>
-<div id="container">
-    <div id="img1">
-        <!--<img src="images/BannerSecond.jpeg" alt="">-->
-    </div>
 
+<div id="img1">
+</div>
+
+<div class="diary">
+    <p>
+        Made With Love
+        <br>
+        <br>
+        <br>
+        Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day
+        however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The
+        Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious
+        Semikoli, but the Little Blind Text didn’t listen.
+        <br>
+        <br>
+        <br>
+        She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the
+        first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the
+        headline of Alphabet Village and the subline of her own road, the Line Lane.
+    </p>
+</div>
+
+<div id="img2">
+</div>
+
+<div class="diary">
+    <p>
+        Made With Love
+        <br>
+        <br>
+        <br>
+        Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day
+        however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The
+        Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious
+        Semikoli, but the Little Blind Text didn’t listen.
+        <br>
+        <br>
+        <br>
+        She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the
+        first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the
+        headline of Alphabet Village and the subline of her own road, the Line Lane.
+    </p>
+</div>
+
+<div id="img3">
+</div>
+
+<div class="diary" id="content">
+    <h2>Made With Love</h2>
     <div>
-        <p>
-            Made With Love
-            <br>
-            <br>
-            <br>
-            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.
-            <br>
-            <br>
-            <br>
-            She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.
+        <p id="left-content">
+            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however
+            a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised
+            her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little
+            Blind Text didn’t listen.
         </p>
-    </div>
-
-    <div id="img2">
-        <!--<img src="images/BannerFirst.jpeg" alt="" style="width: 100%">-->
-    </div>
-
-    <div>
-        <p>
-            Made With Love
-            <br>
-            <br>
-            <br>
-            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.
-            <br>
-            <br>
-            <br>
-            She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.
+        <p id="right-content">
+            She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills
+            of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet
+            Village and the subline of her own road, the Line Lane.
         </p>
     </div>
 </div>
