finish the navigation

--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -16,10 +16,10 @@
 <body>
 <div class="header" id="header">
     <div class="inner_c">
-        <img src="images/test.jpg"/>
+        <img src=""/>
         <div class="nav">
             <ul>
-                <li><a href="index.html">网站首页</a></li>
+                <li id="index-show"><a href="index.html">网站首页</a></li>
                 <li><a href="http://zhaosheng.zhbit.com/Column/setting">专业设置</a></li>
                 <li><a href="http://dangqun.zhbit.com/">党务工作</a></li>
                 <li><a href="http://guojihz.zhbit.com/">国际交流</a></li>
