--- a/旅游风景网/detailFirst.html
+++ b/旅游风景网/detailFirst.html
@@ -11,22 +11,22 @@
 </div>
 
 <div class="diary">
-    <p>
-        Made With Love
-        <br>
-        <br>
-        <br>
-        Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day
-        however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The
-        Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious
-        Semikoli, but the Little Blind Text didn’t listen.
-        <br>
-        <br>
-        <br>
-        She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the
-        first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the
-        headline of Alphabet Village and the subline of her own road, the Line Lane.
-    </p>
+    <div id="author-img">
+        <img src="images/cat.jpeg" alt="">
+        <h2>this is my name</h2>
+    </div>
+    <div id="author-introduction">
+        <h2>Made With Love</h2>
+        <p>
+            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One
+            day
+            however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+            The
+            Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and
+            devious
+            Semikoli, but the Little Blind Text didn’t listen.
+        </p>
+    </div>
 </div>
 
 <div id="img2">
@@ -36,9 +36,12 @@
     <div id="scenery-introduction">
         <h2>Made With Love</h2>
         <p>
-            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day
-            however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The
-            Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious
+            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One
+            day
+            however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+            The
+            Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and
+            devious
         </p>
     </div>
     <div id="scenery-img">
@@ -53,14 +56,19 @@
     <h2>Made With Love</h2>
     <div>
         <p id="left-content">
-            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however
-            a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised
-            her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little
+            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One
+            day however
+            a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big
+            Oxmox advised
+            her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but
+            the Little
             Blind Text didn’t listen.
         </p>
         <p id="right-content">
-            She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills
-            of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet
+            She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached
+            the first hills
+            of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the
+            headline of Alphabet
             Village and the subline of her own road, the Line Lane.
         </p>
     </div>
