complete the contact-method of footer

--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -40,7 +40,9 @@
             <div id="weibo">
                 <img src="images/cat.jpeg" alt="" id="weibo-pop">
             </div>
-            <div id="wechat"></div>
+            <div id="wechat">
+                <img src="images/cat.jpeg" alt="" id="wechat-pop">
+            </div>
         </div>
     </div>
 
