finish the music of index page

--- a/旅游风景网/about.html
+++ b/旅游风景网/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>旅行游记</title>
+    <title>关于我们</title>
     <link rel="stylesheet" href="css/detailFirst.css" type="text/css">
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link rel="stylesheet" href="css/footer.css" type="text/css">
@@ -29,7 +29,7 @@
 </div>
 
 <div id="img1">
-    <h1 class="text-center">Less is more</h1>
+    <h1 class="text-center">关于我们</h1>
 </div>
 
 <div class="diary">
