--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -21,7 +21,7 @@
                 <li><a href="http://dangqun.zhbit.com/">旅行游记</a></li>
                 <li><a href="http://guojihz.zhbit.com/">旅行游记</a></li>
                 <li><a href="http://www.zhbit.com/zhaos_jy/jycy.html">关于我们</a></li>
-                <li class="last"><a href="RegisterFirst.html">用户注册</a></li>
+                <li class="last"><a href="registerFirst.html">用户注册</a></li>
             </ul>
         </div>
         <a href="login.html" class="jrwm">登录</a>
