--- a/旅游风景网/RegisterFirst.html
+++ b/旅游风景网/RegisterFirst.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>用户注册</title>
-    <link href="css/RegisterFirst.css" type="text/css" rel="stylesheet">
+    <link href="css/registerFirst.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div id="banner">
