--- a/旅游风景网/RegisterSecond.html
+++ b/旅游风景网/RegisterSecond.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>用户注册</title>
-    <link href="css/RegisterSecond.css" rel="stylesheet" type="text/css">
+    <link href="css/registerSecond.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="banner">
