--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
     <!--注意引入顺序-->
+    <link rel="stylesheet" href="css/font-awesome.min.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="css/audio.css" media="screen" type="text/css" />
     <link rel="stylesheet" href="css/footer.css" type="text/css">
 
     <!--不要去用beta版，不稳定-->
@@ -19,15 +21,15 @@
 <body>
 <div class="header" id="header">
     <div class="inner_c">
-        <img src=""/>
+        <!--<img src=""/>-->
         <div class="nav">
             <ul>
                 <li id="index-show"><a href="index.html">网站首页</a></li>
                 <li><a href="detailFirst.html">旅行游记</a></li>
                 <li><a href="http://dangqun.zhbit.com/">旅行游记</a></li>
                 <li><a href="http://guojihz.zhbit.com/">旅行游记</a></li>
-                <li><a href="http://www.zhbit.com/zhaos_jy/jycy.html">关于我们</a></li>
-                <li class="last"><a href="RegisterFirst.html">用户注册</a></li>
+                <li><a href="about.html">关于我们</a></li>
+                <li class="last"><a href="registerFirst.html">用户注册</a></li>
             </ul>
         </div>
         <a href="login.html" class="jrwm">登录</a>
@@ -69,6 +71,41 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
+</div>
+
+<div id="music-box">
+    <div id="music-left">
+        <h2>Made With Love</h2>
+        <p>
+            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One
+            day
+            however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+        </p>
+    </div>
+    <div id="music-right">
+        <div id="container">
+            <div id="player">
+                <audio id="audio">
+                    <source src="audio/陪你度过漫长岁月.mp3" type="audio/mpeg" codecs="mp3"/>
+                </audio>
+                <img src="images/music.jpg">
+                <div class="cover">
+                    <div class="controls">
+                        <button  title="循环播放"><i class="fa fa-retweet fa-lg"></i></button>
+                        <button  title="上一曲"><i class="fa fa-backward fa-2x"></i></button>
+                        <button id="play-pause" title="播放" onclick="togglePlayPause()"><i class="fa fa-play fa-3x"></i></button>
+                        <button  title="下一曲"><i class="fa fa-forward fa-2x"></i></button>
+                        <button title="顺序播放"><i class="fa fa-random fa-lg"></i></button>
+                        <input  name="volume" id="volume" min="0" max="1" step="0.1" type="range" onchange="setVolume()" />
+                    </div>
+                    <div class="info">
+                        <p class="song"><a href="#" >陪你度过漫长岁月</a></p>
+                        <p class="author"><a href="#">陈奕迅</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div id="albums">
@@ -136,5 +173,6 @@
     </div>
 </footer>
 
+<script src="js/audio.js" type="text/javascript"></script>
 </body>
 </html>
