finish the index framework

--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -73,7 +73,7 @@
     </a>
 </div>
 
-<div id="music-box">
+<div id="music-box" class="background">
     <div id="music-left">
         <h2>Made With Love</h2>
         <p>
@@ -108,7 +108,7 @@
     </div>
 </div>
 
-<div id="albums">
+<div id="albums" class="background">
     <div id="FirstRow" class="row">
         <div class="PhotoFrame">
             <img src="images/img1.jpg" >
@@ -134,6 +134,28 @@
         <div class="Desc">
             <h4>test</h4>
             <p>this is just a test!</p>
+        </div>
+    </div>
+</div>
+
+<div id="about" class="background">
+    <div id="about-left">
+        <h2>
+            <span id="left-span">Never Stop</span>
+            <span id="right-span">Exploring</span>
+        </h2>
+        <p>
+            Travel the world with one of the most experienced travel agencies in the area.
+            Our Agency brings to its clients over 50 years of combined travel expertise.
+        </p>
+    </div>
+    <div id="about-right">
+        <p>
+            Worldwide options are available to individuals, families, groups and corporate teams
+            that offer the convenience of skilled planning at extraordinary savings.
+        </p>
+        <div>
+            <a href="about.html">关于我们</a>
         </div>
     </div>
 </div>
