alter with new style in register page

--- a/旅游风景网/RegisterFirst.html
+++ b/旅游风景网/RegisterFirst.html
@@ -6,9 +6,9 @@
     <link href="css/registerFirst.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div id="banner">
-    <img src="images/BannerThird.jpeg">
-</div>
+<!--<div id="banner">-->
+    <!--<img src="images/BannerThird.jpeg">-->
+<!--</div>-->
 <div id="content">
     <h2 id="step">用户注册</h2>
     <form method="post" action="registerSecond.html" id="form">
@@ -43,7 +43,7 @@
                     <span class="left">性别：</span>
                 </td>
                 <td>
-                    <input type="radio" name="sex" id="male" class="chose">
+                    <input type="radio" name="sex" id="male">
                     <label for="male">男</label>
                     <input type="radio" id="female" name="sex" class="chose">
                     <label for="female">女</label>
@@ -62,7 +62,7 @@
                     <span class="left">兴趣爱好：</span>
                 </td>
                 <td>
-                    <input type="checkbox" id="football" name="interest" class="chose"/>
+                    <input type="checkbox" id="football" name="interest"/>
                     <label for="football">足球</label>
                     <input type="checkbox" id="basketball" name="interest" class="chose"/>
                     <label for="basketball">蓝球</label>
