finish the register

--- a/旅游风景网/RegisterSecond.html
+++ b/旅游风景网/RegisterSecond.html
@@ -6,9 +6,9 @@
     <link href="css/registerSecond.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="banner">
-    <img src="images/BannerFirst.jpeg">
-</div>
+<!--<div id="banner">-->
+    <!--<img src="images/BannerFirst.jpeg">-->
+<!--</div>-->
 <div id="content">
     <h2 id="step">用户注册</h2>
     <form method="post" action="registerThird.html" id="form">
