fix the bank in the top

--- a/旅游风景网/RegisterSecond.html
+++ b/旅游风景网/RegisterSecond.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <title>用户注册</title>
     <link href="css/registerSecond.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/header.css" type="text/css">
+    <!--<link rel="stylesheet" href="css/footer.css" type="text/css">-->
+
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/hideNavigation.js"></script>
+    <script type="text/javascript" src="js/contactMethod.js"></script>
 </head>
 <body>
+<div class="header" id="header">
+    <div class="inner_c">
+        <!--<img src=""/>-->
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">网站首页</a></li>
+                <li><a href="detailFirst.html">旅行游记</a></li>
+                <li><a href="http://dangqun.zhbit.com/">旅行游记</a></li>
+                <li><a href="http://guojihz.zhbit.com/">旅行游记</a></li>
+                <li><a href="about.html">关于我们</a></li>
+                <li class="last" id="index-show"><a href="registerFirst.html">用户注册</a></li>
+            </ul>
+        </div>
+        <a href="login.html" class="jrwm">登录</a>
+    </div>
+</div>
+
 <div id="content">
     <h2 id="step">用户注册</h2>
     <form method="post" action="registerThird.html" id="form">
