--- a/旅游风景网/RegisterFirst.html
+++ b/旅游风景网/RegisterFirst.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <title>用户注册</title>
     <link href="css/registerFirst.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css/header.css" type="text/css">
+    <!--<link rel="stylesheet" href="css/footer.css" type="text/css">-->
+
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/hideNavigation.js"></script>
+    <script type="text/javascript" src="js/contactMethod.js"></script>
 </head>
 <body>
+<div class="header" id="header">
+    <div class="inner_c">
+        <!--<img src=""/>-->
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">网站首页</a></li>
+                <li><a href="detailFirst.html">旅行游记</a></li>
+                <li><a href="http://dangqun.zhbit.com/">旅行游记</a></li>
+                <li><a href="http://guojihz.zhbit.com/">旅行游记</a></li>
+                <li><a href="about.html">关于我们</a></li>
+                <li class="last" id="index-show"><a href="registerFirst.html">用户注册</a></li>
+            </ul>
+        </div>
+        <a href="login.html" class="jrwm">登录</a>
+    </div>
+</div>
+
 <div id="content">
     <h2 id="step">用户注册</h2>
     <form method="post" action="registerSecond.html" id="form">
@@ -81,5 +104,40 @@
         </table>
     </form>
 </div>
+
+<footer>
+    <div id="contact">
+        <div id="logo">
+            <img src="" alt="">
+        </div>
+        <div id="concact-method">
+            <div id="weibo">
+                <img src="images/cat.jpeg" alt="" id="weibo-pop">
+            </div>
+            <div id="wechat">
+                <img src="images/cat.jpeg" alt="" id="wechat-pop">
+            </div>
+        </div>
+    </div>
+    <div id="copyright">
+        <p>
+            <span class="copyright-span"><a href="#">公司简介</a></span>
+            <span class="copyright-span"><a href="#">广告服务</a></span>
+            <span class="copyright-span"><a href="#">联系我们</a></span>
+            <span class="copyright-span"><a href="#">招聘信息</a></span>
+            <span class="copyright-span"><a href="#">网站律师</a></span>
+        </p>
+        <p>
+            <span class="copyright-span"> <a href="#">地址:广东省珠海市唐家湾金凤路6号</a></span>
+            <span class="copyright-span"><a href="#">邮编：519088 </a></span>
+        </p>
+        <p>
+            <span> <a href="#">Copyright©1996 - 2017 Travelling. All Rights Reserved.</a></span>
+        </p>
+        <p>
+            <span> <a href="#">Sightseeing公司 版权所有</a></span>
+        </p>
+    </div>
+</footer>
 </body>
 </html>
