update the footer-style

--- a/旅游风景网/RegisterSecond.html
+++ b/旅游风景网/RegisterSecond.html
@@ -5,11 +5,9 @@
     <title>用户注册</title>
     <link href="css/registerSecond.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/header.css" type="text/css">
-    <!--<link rel="stylesheet" href="css/footer.css" type="text/css">-->
 
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/hideNavigation.js"></script>
-    <script type="text/javascript" src="js/contactMethod.js"></script>
 </head>
 <body>
 <div class="header" id="header">
@@ -28,6 +26,8 @@
         <a href="login.html" class="jrwm">登录</a>
     </div>
 </div>
+
+<div id="blank"></div>
 
 <div id="content">
     <h2 id="step">用户注册</h2>
