--- a/旅游风景网/RegisterFirst.html
+++ b/旅游风景网/RegisterFirst.html
@@ -5,11 +5,9 @@
     <title>用户注册</title>
     <link href="css/registerFirst.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css" type="text/css">
-    <!--<link rel="stylesheet" href="css/footer.css" type="text/css">-->
 
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/hideNavigation.js"></script>
-    <script type="text/javascript" src="js/contactMethod.js"></script>
 </head>
 <body>
 <div class="header" id="header">
@@ -28,6 +26,8 @@
         <a href="login.html" class="jrwm">登录</a>
     </div>
 </div>
+
+<div id="blank"></div>
 
 <div id="content">
     <h2 id="step">用户注册</h2>
@@ -105,39 +105,5 @@
     </form>
 </div>
 
-<footer>
-    <div id="contact">
-        <div id="logo">
-            <img src="" alt="">
-        </div>
-        <div id="concact-method">
-            <div id="weibo">
-                <img src="images/cat.jpeg" alt="" id="weibo-pop">
-            </div>
-            <div id="wechat">
-                <img src="images/cat.jpeg" alt="" id="wechat-pop">
-            </div>
-        </div>
-    </div>
-    <div id="copyright">
-        <p>
-            <span class="copyright-span"><a href="#">公司简介</a></span>
-            <span class="copyright-span"><a href="#">广告服务</a></span>
-            <span class="copyright-span"><a href="#">联系我们</a></span>
-            <span class="copyright-span"><a href="#">招聘信息</a></span>
-            <span class="copyright-span"><a href="#">网站律师</a></span>
-        </p>
-        <p>
-            <span class="copyright-span"> <a href="#">地址:广东省珠海市唐家湾金凤路6号</a></span>
-            <span class="copyright-span"><a href="#">邮编：519088 </a></span>
-        </p>
-        <p>
-            <span> <a href="#">Copyright©1996 - 2017 Travelling. All Rights Reserved.</a></span>
-        </p>
-        <p>
-            <span> <a href="#">Sightseeing公司 版权所有</a></span>
-        </p>
-    </div>
-</footer>
 </body>
 </html>
