--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -50,6 +50,10 @@
         </form>
     </div>
 </div>
+
+<div id="footer-style">
+</div>
+
 <footer>
     <div id="contact">
         <div id="logo">
