using gif as a bannner

--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -46,18 +46,17 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="images/BannerFirst.jpeg" alt="..." style="width: 100%">
+            <img src="images/BannerFirst.jpeg" alt="..." style="width: 100%; height: 450px">
             <div class="carousel-caption">
             </div>
         </div>
         <div class="item">
-            <img src="images/BannerSecond.jpeg" alt="..." style="width: 100%">
+            <img src="images/BannerThird.jpeg" alt="..." style="width: 100%; height: 450px">
             <div class="carousel-caption">
             </div>
         </div>
         <div class="item">
-            <!--<video src="video/home_loop_720p.mp4" autoplay="ture" loop="ture" ></video>-->
-            <img src="images/BannerThird.jpeg" alt="..." style="width: 100%">
+            <img src="images/voyage.gif" alt="..." style="width: 100%; height: 450px">
             <div class="carousel-caption">
             </div>
         </div>
@@ -109,6 +108,7 @@
 </div>
 
 <div id="albums" class="background">
+
     <div id="FirstRow" class="row">
         <div class="PhotoFrame">
             <img src="images/img1.jpg" >
