--- a/旅游风景网/registerThird.html
+++ b/旅游风景网/registerThird.html
@@ -30,10 +30,10 @@
 <div id="blank"></div>
 
 <div id="content">
-    <h2>恭喜您！</h2>
+    <h1>恭喜您</h1>
     <div id="info">
-        <img src="" alt="">
-        <h2></h2>
+        <img src="images/succeessful.PNG" alt="">
+        <h2>注册成功啦！</h2>
     </div>
     <div id="back">
         <a href="index.html">返回首页</a>
