finish the index framework

--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -46,7 +46,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="images/BannerFirst.jpeg" alt="..." style="width: 100%; height: 450px">
+            <img src="images/voyage.gif" alt="..." style="width: 100%; height: 450px">
             <div class="carousel-caption">
             </div>
         </div>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="images/voyage.gif" alt="..." style="width: 100%; height: 450px">
+            <img src="images/BannerFirst.jpeg" alt="..." style="width: 100%; height: 450px">
             <div class="carousel-caption">
             </div>
         </div>
@@ -108,28 +108,30 @@
 </div>
 
 <div id="albums" class="background">
-
+    <div id="img1"></div>
     <div id="FirstRow" class="row">
         <div class="PhotoFrame">
-            <img src="images/img1.jpg" >
+            <img src="images/img1.jpg"  class="in-images" >
         </div>
         <div class="Desc">
             <h4>test</h4>
             <p>this is just a test!</p>
         </div>
     </div>
+    <div id="img4"></div>
     <div id="SecondRow" class="row">
         <div class="Desc">
             <h4>test</h4>
             <p>this is just a test!</p>
         </div>
         <div class="PhotoFrame" >
-            <img src="images/img1.jpg" >
+            <img src="images/img1.jpg"  class="in-images">
         </div>
     </div>
+    <div id="img3"></div>
     <div id="ThirdRow" class="row">
         <div class="PhotoFrame">
-            <img src="images/img1.jpg" >
+            <img src="images/img1.jpg"  class="in-images">
         </div>
         <div class="Desc">
             <h4>test</h4>
@@ -137,6 +139,8 @@
         </div>
     </div>
 </div>
+
+<div id="img2"></div>
 
 <div id="about" class="background">
     <div id="about-left">
