--- a/旅游风景网/detailFirst.html
+++ b/旅游风景网/detailFirst.html
@@ -71,8 +71,7 @@
     </div>
 </div>
 
-<div id="img3">
-</div>
+<div id="img3"></div>
 
 <div class="diary" id="content">
     <h2>Made With Love</h2>
