complete the icon

--- a/旅游风景网/index.html
+++ b/旅游风景网/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>旅游风景网</title>
+    <link rel="icon" href="images/bitbug_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
@@ -21,7 +22,7 @@
 <body>
 <div class="header" id="header">
     <div class="inner_c">
-        <!--<img src=""/>-->
+        <img src="images/logo.png"/>
         <div class="nav">
             <ul>
                 <li id="index-show"><a href="index.html">网站首页</a></li>
@@ -109,7 +110,7 @@
 
 <div id="albums" class="background">
     <div id="img1"></div>
-    <div id="FirstRow" class="row">
+    <div id="FirstRow" class="my-row">
         <div class="PhotoFrame">
             <img src="images/img1.jpg"  class="in-images" >
         </div>
@@ -119,7 +120,7 @@
         </div>
     </div>
     <div id="img4"></div>
-    <div id="SecondRow" class="row">
+    <div id="SecondRow" class="my-row">
         <div class="Desc">
             <h4>test</h4>
             <p>this is just a test!</p>
@@ -129,7 +130,7 @@
         </div>
     </div>
     <div id="img3"></div>
-    <div id="ThirdRow" class="row">
+    <div id="ThirdRow" class="my-row">
         <div class="PhotoFrame">
             <img src="images/img1.jpg"  class="in-images">
         </div>
@@ -169,7 +170,8 @@
 <footer>
     <div id="contact">
         <div id="logo">
-            <img src="" alt="">
+            <img src="images/logo.png" alt="">
+            <p>My spirit lifted high</p>
         </div>
         <div id="concact-method">
             <div id="weibo">
