complete the footer error in the login page

--- a/旅游风景网/login.html
+++ b/旅游风景网/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>用户登录</title>
+    <link rel="icon" href="images/bitbug_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/login.css" type="text/css">
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link rel="stylesheet" href="css/footer.css" type="text/css">
@@ -13,7 +14,7 @@
 <body>
 <div class="header" id="header">
     <div class="inner_c">
-        <img src=""/>
+        <img src="images/logo.png"/>
         <div class="nav">
             <ul>
                 <li><a href="index.html">网站首页</a></li>
@@ -57,7 +58,8 @@
 <footer>
     <div id="contact">
         <div id="logo">
-            <img src="" alt="">
+            <img src="images/logo.png" alt="">
+            <p>My spirit lifted high</p>
         </div>
         <div id="concact-method">
             <div id="weibo">
